# learning-projects

./: README.md
python/DOABLE/: .env.example  README.md  main.py  pyproject.toml  server.py
python/DOABLE/agent/: graph.py  prompts.py  states.py  tools.py
python/DOABLE/generated_project/: food.py  game.py  main.py  pyproject.toml  score.py  snake.py
python/DOABLE/projects/870d20e1-c666-483e-9201-78edd5a939d6/: index.html  script.js  style.css
python/DOABLE/projects/Calculator_project/: README.md  index.html  script.js  styles.css
python/DOABLE/projects/To_do_list_project/: README.md  index.html  script.js  styles.css
python/DOABLE/static/: app.js  index.html  style.css
python/FastAPI_Project/: README.md  frontend.py  pyproject.toml  start.sh
python/FastAPI_Project/app/: app.py  db.py  users.py
python/automatic_webScraping/beautiful_soup/: README.md
python/automatic_webScraping/beautiful_soup/project/: Scraper.py  output.csv  pyproject.toml
