[project]
name = "Doable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.31.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-groq>=0.3.7",
    "langgraph>=0.6.3",
    "pip>=25.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sse-starlette>=2.0.0",
]

[tool.uv.workspace]
members = [
    "generated_project",
    "projects/4fc9a8d5-f3a6-42fb-bff0-0f240a999d32",
    "projects/676cd707-e0f9-44a2-a726-920c269d014f",
]

